# many_chickens

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
app/: CMakeLists.txt  GLFWObject.cpp  Model.cpp  VulkanObject.cpp  main.cpp
app/include/app/: Camera.h  DescriptorInfo.h  HelperFunctions.h  Model.h  Shader.h  ShaderProgram.h  UBO.h  Vertex.h  VulkanObject.h
app/shaders/: depth_pyramid_generate.glsl  geometry_pass.frag  geometry_pass.vert  lighting_pass.frag  lod_indirect.glsl  meshlet_mesh.frag  meshlet_mesh.mesh
assets/chicken/: chicken.mtl
